# kickstart-python-project

./: cookiecutter.json  copier.yaml  license.md
.github/: CODEOWNERS
_archive/cookiecutter/: cookiecutter.json  license-apache.md  license-gpl.md  license-mit.md
_archive/cookiecutter/hooks/: post_gen_project.py
docs/: changes.md  conf.py  contributing.md  index.rst  migration-to-copier.md  readme.md
hooks/: post_gen_project.py
template/{{project_name}}/: .copier-answers.yml.jinja  .env.template.jinja  .gitignore  .pre-commit-config.yaml.jinja  .python-version.jinja  justfile  pyproject.toml.jinja  {% if git_platform == 'gitlab' %}.gitlab-ci.yaml{% endif %}.jinja  {% if license == 'Apache-2.0' %}license.md{% endif %}.jinja  {% if license == 'GPL-3.0' %}license.md{% endif %}.jinja  {% if license == 'MIT' %}license.md{% endif %}.jinja  {% if support_rtd %}.readthedocs.yaml{% endif %}.jinja
template/{{project_name}}/.just/: just.justfile  pre-commit.justfile  prek.justfile  project.justfile  supervisord.just  ubuntu.justfile  uv.justfile
template/{{project_name}}/docs/: conf.py.jinja  index.md.jinja  license.md  readme.md.jinja  reference.md.jinja  usage.md.jinja
template/{{project_name}}/etc/: logging.yaml.jinja
template/{{project_name}}/etc/ipython/profile_default/: ipython_config.py  ipython_kernel_config.py
template/{{project_name}}/etc/ipython/profile_default/db/: dhist
template/{{project_name}}/etc/ipython/profile_default/startup/: 30-settings.py.jinja
template/{{project_name}}/etc/ipython/profile_default/startup/_archive/: 05-warnings.py  13-requests-httpformatting.py
template/{{project_name}}/etc/supervisord.d/: gunicorn-django.conf.jinja
template/{{project_name}}/src/{{package_name}}/: __init__.py.jinja  about.py.jinja  cfg.py.jinja  logging.py.jinja  logging.yaml.jinja
template/{{project_name}}/src/{{package_name}}/utils/: __init__.py.jinja
template/{{project_name}}/src/{{package_name}}/{% if with_cyclopts %}cli{% endif %}/: __init__.py.jinja  subcmd1.py.jinja
template/{{project_name}}/tests/: test_about.py.jinja  test_cfg.py.jinja  test_foo.py  test_init.py.jinja  test_logging.py.jinja  {% if with_cyclopts %}test_cli.py{% endif %}.jinja
template/{{project_name}}/{% if git_platform == 'github' %}.github{% endif %}/: CODEOWNERS.jinja  dependabot.yml  funding.yaml.jinja
template/{{project_name}}/{% if git_platform == 'github' %}.github{% endif %}/workflows/: testing.yaml.jinja
{{cookiecutter.project_name}}/:  .readthedocs.yaml  .env.example  .env.template  .gitignore  .gitlab-ci.yaml  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  justfile  license.md  makefile  pyproject.toml  {% if cookiecutter.license == 'MIT' -%} license.md {%- endif %}
{{cookiecutter.project_name}}/.claude/: CLAUDE.md
{{cookiecutter.project_name}}/.github/: CODEOWNERS  funding.yaml
{{cookiecutter.project_name}}/.github/workflows/: dependabot-auto-merge.yaml  linting.yaml  testing.yaml
{{cookiecutter.project_name}}/.just/: bandit.justfile  dir-structure.justfile  dotenv.justfile  ipython.justfile  just.justfile  mutmut.justfile  mypy.justfile  pre-commit.justfile  project.justfile  pylint.justfile  pyroma.justfile  pytest.justfile  readthedocs.justfile  ruff.justfile  safety.justfile  sshx.justfile  ty.justfile  ubuntu.justfile  uv.justfile
{{cookiecutter.project_name}}/.make/: 01-path.mk  02-dir-structure.mk  04-pip.mk  05-git.mk  14-mypy.mk  15-bandit.mk  19-safety.mk  20-pytest.mk  21-tox.mk  22-nox.mk  25-sphinx.mk  30-conda.mk  30-pre-commit.mk  31-mamba.mk  40-pyenv.mk  46-django.mk  55-poetry.mk
{{cookiecutter.project_name}}/docs/: conf.py  readme.md
{{cookiecutter.project_name}}/etc/: logging.yaml  logging.yml  pythonstartup.py
{{cookiecutter.project_name}}/etc/ipython/profile_default/: ipython_config.py  ipython_kernel_config.py
{{cookiecutter.project_name}}/etc/ipython/profile_default/startup/: 10-logging.py  20-rich.py  30-demo.py  30-settings.py  40-demo.py
{{cookiecutter.project_name}}/etc/ipython/profile_default/startup/_archive/: 04-entrypoints.py  11-urllib3.py  12-requests.py  20-flask.py
{{cookiecutter.project_name}}/etc/ipython/profile_ipdb/: ipython_config.py  ipython_kernel_config.py
{{cookiecutter.project_name}}/etc/ipython/profile_ipdb/startup/: 01-imports.py
{{cookiecutter.project_name}}/etc/requirements/: required-debian.txt  requirements-rpm.txt
{{cookiecutter.project_name}}/etc/supervisord.d/: gunicorn-django.conf  gunicorn.conf
{{cookiecutter.project_name}}/scripts/: start-uvicorn.sh
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  _about.py  about.py  cfg.py  cli.py  logging.py  logging.yaml  py.typed
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/cli/: __init__.py  subcmd1.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/utils/: __init__.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_about.py  test_cfg.py  test_cli.py  test_init.py  test_logging.py
{{cookiecutter.project_name}}/tests/_helpers/: __init__.py
