# This is a comment.
# syntax-documentation:
#  - https://python-poetry.org/docs/pyproject
#  - https://flit.readthedocs.io/en/latest/pyproject_toml.html
#
# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
#
#   > poetry install
#   > poetry install --only docs
#   > poetry install (--with|--without) (docs|dev|ipython|profiling|testing|typing)

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"


[tool.bandit]
# bandit does not use this config by default.
# You need to invoke "bandit --configfile pyproject.toml"
# see https://github.com/PyCQA/bandit/issues/318"
baseline = "etc/bandit-baseline.json"
exclude_dirs = [".venv", "var"]
recursive = true
skips = ["B101"]
targets = ["src", "tests"]


[tool.black]
include = '\.py$'  # regex -> single-quotes
line-length = 120
profile = "black"
target_version = ["py311"]


[tool.coverage.html]
directory = "var/coverage/html"

[tool.coverage.xml]
output = "var/coverage/coverage.xml"

# [tool.coverage.paths]
# source = ["src", "*/site-packages"]
# tests = ["tests", "*/tests"]

[tool.coverage.report]
# cfr. https://coverage.readthedocs.io/en/coverage-4.2/excluding.html
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
# fail_under = 100
include = ["src/*"]
# omit = ["*tests*"]
# show_missing = true

[tool.coverage.run]
branch = true
data_file = "var/coverage/coverage.db"
source = ["{{cookiecutter.package_name}}", "tests"]


# [tool.flake8]
# max_line_length = 121
# per_file_ignores = [
#     "tests/test_entrypoints.py:B011", # B011: Do not call assert False
#     "__init__.py:F401",               # F401: imported but unused
# ]
# extend-ignore =
#     E203  # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
#     S101  # Allow assertions since we do not intend to compile to optimised byte code.


[tool.isort]
include_trailing_comma = true # corresponds to -tc flag
known_third_party = []
line_length = 120             # corresponds to -w  flag
multi_line_output = 3         # corresponds to -m  flag
skip_glob = '^((?!py$).)*$'   # isort all Python files
# profile = "black"
# force_single_line = true
# lines_after_imports = 2


[tool.mypy]
# cfr. https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
cache_dir = "var/cache/mypy"
check_untyped_defs = true
exclude = "^bin/"
ignore_missing_imports = true
mypy_path = ["src"]
# pretty = true
# show_column_numbers = true
# show_error_codes = true
# show_error_context = true
# strict = true
# warn_unreachable = true


[tool.mutmut]
# cfr. https://mutmut.readthedocs.io/en/latest/#configuration
paths_to_mutate = [ "src/" ]
pytest_add_cli_args_test_selection= [ "tests/" ]


[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
license = "{{cookiecutter.license}}"
# license = { text = "{{cookiecutter.license}}" }
description = "{{cookiecutter.description}}"
readme = "docs/readme.md"
requires-python = ">={{cookiecutter.minimum_python}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
maintainers = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
keywords = ["kickstart"]
classifiers = [
    "{{cookiecutter.development_status}}",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    {%- for v in reversed(range(cookiecutter.minimum_python|int, 15)) %}
    "Programming Language :: Python :: 3.{{ v }}",
    {%- endfor %}

    # "Programming Language :: Python :: 3.14",
    # "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.12",
    # "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.10",
    # "Programming Language :: Python :: 3.9",
    # "Programming Language :: Python :: {{cookiecutter.minimum_python}}",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]





dependencies = [
    "autoread-dotenv>=1.0.3",

    {%- if cookiecutter.with_cyclopts|int %}
    "cyclopts>=3.24",
    {%- endif %}

    {%- if cookiecutter.with_django|int %}
    "django>=4.2",
    "django-ninja>=0.19",
    "django-stubs>=1.12.0",
    # "wagtail>=4.1",
    "watchfiles>=0.18.0",
    {%- endif %}

    {%- if cookiecutter.with_fastapi|int %}
    "fastapi[all]>=0.117",
    {%- endif %}
    "httpx>=0.28",
    "libranet-logging>=1.5",
    "python-dateutil>=2.9",
    "pydantic>=2.9",
]


[dependency-groups]
dev = [
    "pylint>=3.1.0",
    "ruff>=0.8.6",
]
deploy = [
    "gunicorn>=20.1",
    "hypercorn>=0.14",
    "uvicorn>=0.20"
    # "uvicorn = { extras = ["standard"], version = ">=0.20" }
]
docs = [
    "autoapi>=2.0",
    # "furo>=2021.11",
    "markupsafe>=2.1",
    "myst-parser>=1.0",
    "pdoc>=13.0",
    "recommonmark>=0.7",
    "Sphinx>=4.4",
    "sphinx-autoapi>=1.8",
    # "sphinx-autobuild>=2021.3",
    # "sphinx-click>=3.0",
    "sphinx-rtd-theme>=1.0",
]
ipython = [
    "ipdb>=0.13",
    "ipython>=8.0",
    "rich>=13.9.4",
]
jupyter = [
    "ipykernel>=6.0",
]
packaging = [
    "pyroma>=4.2",
]
pre-commit = [
    "pre-commit>=3.5",  # 3.5 still supports python3.8
    "pre-commit-hooks>=5.0.0",
]
profiling = [
    "gprof2dot>=2022.7",
    "importtime-waterfall>=1.0",
    "pyinstrument>=4.4",
    "tuna>=0.5",
]
security = [
    "bandit>=1.7",
    # bandit = { extras = ["toml"], version = ">=1.7" }
    "safety>=2.3",
]
testing = [
    "mutmut>=3.3",
    "pytest>=8.1",
    "pytest-clarity>=1.0",
    "pytest-cov>=5.0.0",
    "pytest-dotenv>=0.5",
    {%- if cookiecutter.with_django|int %}
    "pytest-django>=4.5.2",
    {%- endif %}
    "pytest-mock>=3.15",
    "pytest-xdist==3.8.0",
]
typing = [
    "lxml>=4.9",
    # lxml = { version = ">=4.9", allow-prereleases = false } # mypy coverage-report
    "mypy>=1.14",
    "ty>=0.0.1a17",
    "typeguard>=2.13",
    "types-python-dateutil>=2.8",
    "types-requests>=2.28",
    "types-toml>=0.10",
]
webtesting = [
    "httpie>=3.2",
    "locust>=2.11"
]




# [tool.poetry.group.dev.dependencies]
# absolufy-imports = ">=0.3"
# bandit = ">=1.7"
# black = { version = ">=22.0", allow-prereleases = true }
# flake8 = ">=4.0"
# flake8-bugbear = ">=23.2"
# flake8-docstrings = ">=1.6"
# flake8-pyproject = ">=1.2"
# flake8-pytest-style = ">=1.6"
# flake8-rst-docstrings = ">=0.2"
# isort = ">=5.10"
# pep8-naming = ">=0.12"
# pre-commit = ">=2.14"
# pre-commit-hooks = ">=4.1"
# pydocstyle = ">=6.1"
# pylint = ">=2.12"
# ruff = ">=0.0"
# safety = ">=1.10"








# [tool.poetry.group.testing.dependencies]
# coverage = { extras = ["toml"], version = ">=6.2" }
# hypothesis = ">=6.72"
# nox = ">=2022.11"
# nox-poetry = ">=1.0"
# pytest = ">=7.0"
# pytest-clarity = ">=1.0"
# pytest-codecov = ">=0.5"
# pytest-cov = ">=3.0"
# {%- if cookiecutter.with_cyclopts|int %}
# pytest-click = ">=1.1"
# {%- endif %}
# pytest-mock = ">=3.6"
# pytest-xdist = ">=3.2"
# tox = ">=4.4"
# xdoctest = { extras = ["colors"], version = ">=0.15" }



[project.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.cli:app"

[project.urls]
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
"Changelog" = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/docs/changes.md"
"Issues" = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/issues"
"Releases" = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"
{% if cookiecutter.support_rtd|int %}documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"{% endif %}
{% if cookiecutter.support_rtd|int == 0 %}documentation = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"{% endif %}





[tool.pylint.format]
max-line-length = 120
good-names = [
    "foo", # dummy variable
    "i",   # counter in loop
    "ok",  # status
]

[tool.pylint.messages_control]
disable = [
    "C0116", # missing-function-docstring
]

[tool.pytest.ini_options]
cache_dir = "var/cache/pytest"
log_cli = false                   # enable to show log-output
log_cli_level = "NOTSET"
filterwarnings = []
markers = ["unit", "integration"]
testpaths = ["tests"]
# the junit-report is used to report coverage in gitlab
addopts = "--color=yes --junit-xml='var/coverage/pytest.xml'"







[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
cache-dir = "var/cache/ruff" # relative to project_root
line-length = 120

[tool.ruff.lint]
ignore = [
    # COM812 may cause conflicts when used with the ruff formatter
    "COM812",
    # D203 conflicts withs D211
    "D203", # 1 blank line required before class docstring
    # "D211", # No blank lines allowed before class docstring
    # D212 conflicts with D213
    "D212",  # Multi-line docstring summary should start at the first line
    # "D213",  # Multi-line docstring summary should start at the second line
    "ERA001", # Found commented-out code
]
select = ["ALL"]


[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
combine-as-imports = true
force-single-line = false
from-first = false
known-third-party = []
known-first-party = ["autoread_dotenv"]
known-local-folder = ["_helpers"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",  # Missing type annotation
    "D103",    # Missing docstring in public function
    "INP001",  # tests-dir should not be a python-package
    "PLC0415", # `import` should be at the top-level of a file
    "S101",    # Use of `assert` detected
    ]


[tool.ty]


[tool.uv]
managed = true
package = true
default-groups = [
    # "dev",
    # "ipython",
    # "jupyter",
    # "pre-commit",
    # "testing",
    # "typing",
]